--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@
 gradlew
 gradlew.bat
 sml/
+gradlew
+gradlew
+.gradle/file-system.probe
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/buildOutputCleanup/cache.properties
+.gradle/buildOutputCleanup/outputFiles.bin
+build/reports/problems/problems-report.html
+.gitignore
+gradle/wrapper/gradle-wrapper.properties
+sml/build.gradle.kts
+sml/build/distributions/sml.tar
+sml/build/distributions/sml.zip
+sml/build/libs/sml.jar
